--- a/hw12_13_14_15_calendar/configs/config.toml
+++ b/hw12_13_14_15_calendar/configs/config.toml
@@ -1,5 +1,18 @@
 [logger]
-level = "INFO"
+log_level = "INFO"
+log_file = "./logs/log.log"
+log_trace_on = false
+log_prod_on = false
 
-# TODO
-# ...
+[db]
+db_user = "admin"
+db_password = "123"
+db_database = "go"
+db_host = "db_host"
+
+[memory]
+memory_type="memory"
+
+[server]
+server_host="127.0.0.1"
+server_port="5050"
