--- a/hw12_13_14_15_calendar/configs/config.toml
+++ b/hw12_13_14_15_calendar/configs/config.toml
@@ -8,7 +8,7 @@ log_prod_on = false
 db_user = "admin"
 db_password = "123"
 db_database = "go"
-db_host = "db_host"
+db_host = "127.0.0.1"
 
 [memory]
 memory_type="memory"
