--- a/hw12_13_14_15_calendar/configs/config.toml
+++ b/hw12_13_14_15_calendar/configs/config.toml
@@ -7,8 +7,9 @@ log_prod_on = false
 [db]
 db_user = "admin"
 db_password = "123"
-db_database = "go"
+db_database = "go_api"
 db_host = "127.0.0.1"
+db_port = 3306
 
 [memory]
 memory_type="memory"
