--- a/hw12_13_14_15_calendar/configs/config.toml
+++ b/hw12_13_14_15_calendar/configs/config.toml
@@ -14,6 +14,10 @@ db_port = 3306
 [memory]
 memory_type="memory"
 
-[server]
+[rest]
 server_host="127.0.0.1"
 server_port="5050"
+
+[grpc]
+server_host="127.0.0.1"
+server_port="5051"
